package com.omar.assignment.apisdata;

import com.google.gson.JsonObject;

public interface IDataAPI {

    void populate(JsonObject request);
}
